<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Criconet</string>
    <string name="facebook_app_id" translatable="false">459610651835185</string>
    <string name="fb_login_protocol_scheme">fb459610651835185</string>
    <string name="channel_id" translatable="false">Criconet_Notifications</string>
    <string name="ls_channel_id" translatable="false">Live_Streaming</string>
    <string name="label_start_sharing_your_screen">Start Sharing your screen</string>
    <string name="label_stop_sharing_your_screen">Stop Sharing your screen</string>
    <string name="ok">OK</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="notfound">Sorry  No Data found</string>
    <string name="notfound_com">Sorry  No Comments found</string>
    <string name="notfound_users">Sorry  No Users found</string>
    <string name="up_image">uploading_image</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_hd">Forgot Password</string>
    <string name="email_address">Email Address</string>
    <string name="email_addresss">Email :</string>
    <string name="register">Register</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="unblock">Unblock</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="what_s_on_your_mind">Expert Comments..</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="chat">Chat</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="comment">Write a comment..</string>
    <string name="cameraa">Camera 1</string>
    <string name="cameraaa">Camera 2</string>
    <string name="share_a_new_photo">Shared a new photo</string>
    <string name="post_a_new_photo">Posted a new Photo</string>
    <string name="post_a_new_video">Posted a new video</string>
    <string name="likes">Like</string>
    <string name="dislikes" translatable="false">Disliked</string>
    <string name="comments">Comment</string>
    <string name="commentss">Comments</string>
    <string name="share">Share</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="skip_step"><![CDATA[You can skip this step & upload later]]></string>
    <string name="skip_now">Skip Now</string>
    <string name="facebook_sign_in">Continue with Facebook</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="search_users_here">Search users here..</string>
    <string name="login">Login</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="change_password">Change Password</string>
    <string name="setting">Settings</string>
    <string name="dob">D.O.B</string>
    <string name="phone_no">Enter Phone No*</string>
    <string name="phonee">Phone No :</string>
    <string name="phone">Phone Number</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="recommend_this_app">Recommend This App</string>
    <string name="deactivate">DEACTIVATE</string>
    <string name="confirm_deactivate">Are You Sure you want to DEACTIVATE your account ?</string>
    <string name="confirm_delete">Are You Sure you want to DELETE your account ?</string>
    <string name="delete">DELETE</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="loading">Loading..</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pass">Change Password</string>
    <string name="logout">Logout</string>
    <string name="home" translatable="false">Pavilion</string>
    <string name="my_pages" translatable="false">My Pages</string>
    <string name="update_page" translatable="false">Update Page</string>
    <string name="booking_history" translatable="false">Booking history</string>
    <string name="booking_confirmed" translatable="false">Your booking has been confirmed</string>
    <string-array name="genders" translatable="false">
        <item>SELECT GENDER</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="select_language">Select Language you speak</string>
    <string-array name="country" translatable="false">
        <item>Country*</item>
    </string-array>
    <string-array name="state" translatable="false">
        <item>State*</item>
    </string-array>
    <string-array name="city" translatable="false">
        <item>City*</item>
    </string-array>
    <string-array name="privacy2" translatable="false">
        <item>Everyone</item>
        <item>Only me</item>
        <item>Follower</item>
        <item>Following</item>
    </string-array>
    <string name="label_send" translatable="false">Send</string>
    <string name="label_options" translatable="false">Options</string>
    <string name="msg_say_something" translatable="false">Say something…</string>
    <string name="msg_connection_error" translatable="false">Connection error, please check the network settings or make sure channel name/access token are valid</string>
    <string name="bit_rate_value_with_unit" translatable="false">%d kbps</string>
    <string name="frame_rate_value_with_unit" translatable="false">%d fps</string>
    <string name="coach_profile_title">Coach Profile Title*</string>
    <string name="total_experience">Total Experience*</string>
    <string name="any_other_information">Other Information</string>
    <string name="amount_session_30_mins_of_online_e_coaching">Amount/Session * (45 minutes of online e-coaching)</string>
    <string name="save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="choose_your_specialities">Choose your specialities*</string>
    <string name="login_new">Login</string>
    <string name="register_new">Register</string>
    <string name="username_email_id">User Name or Email ID</string>
    <string name="incorrect_username_password">Incorrect Username Or Password</string>
    <string name="password_too_short">Password is too short</string>
    <string name="username">User Name</string>
    <string name="select_sport">Select Gender</string>
    <string name="select_type">Select User Type</string>
    <string name="tearms_condition">By creating your account, you agree to our \n<b>Terms of Use</b></string>
    <string name="forget_your_password">Forgot your password?</string>
    <string name="e_mail">E-Mail</string>
    <string name="recover">Recover</string>
    <string name="weneedemail">We need your registered e-mail address to send you a reset-password link.</string>
    <string name="name_empty_validation">User Name Can’t be empty</string>
    <string name="full_empty_validation">Full name Can’t be empty</string>
    <string name="email_empty_validation">Email Can’t be empty</string>
    <string name="email_invalid_validation">Invalid email format</string>
    <string name="phone_error">Phone number Can’t be empty</string>
    <string name="error_invalid_phone">Invalid input for Phone Number</string>
    <string name="name_limit_validation">Full name must be between 3 to 32 Characters</string>
    <string name="password_cannot_empty">Password Can’t be empty</string>
    <string name="click_continuee">Click to continue</string>
    <string name="message_internal_inconsistency">There was an internal inconsistency. \n Please try again.</string>
    <string name="socket_timeout">The Criconet server is not responding</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="save">Save</string>
    <string name="term_of_use">Terms of Use</string>
    <string name="facebook_logout">Log out</string>
    <string name="otp">Enter Verification Code</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="sent_verification_phone">We have sent a verification code on your Mobile No.</string>
    <string name="sent_verificationn">You will get a verification code on your Mobile No.</string>
    <string name="expire_otp">Your code will expire in</string>
    <string name="timer_txt">2:00</string>
    <string name="resend">Resend code</string>
    <string name="code_msg">Please enter verification code</string>
    <string name="code_invalid">Verification code not correct</string>
    <string name="live_one">Live Streaming</string>
    <string name="recording">Recent Matches</string>
    <string name="coachh">e-Coaching</string>
    <string name="book_now">Book Coach</string>
    <string name="coach_profile">Coach Profile</string>
    <string name="achievement">Achievement</string>
    <string name="bio">Bio</string>
    <string name="available_date_session"><![CDATA[Available Date & Session]]></string>
    <string name="slide_down">Slide it down</string>
    <string name="session_details">Session Details</string>
    <string name="session_date_time"><![CDATA[Session Date & Time]]></string>
    <string name="booking_date">Booking Date</string>
    <string name="session_paid_amount">Online e-Coaching session paid amount</string>
    <string name="booking_status">Booking Status</string>
    <string name="Choose_Post_Photo">Choose Photo</string>
    <string name="choose_post_video">Choose Video</string>
    <string name="pay_now">Pay Now</string>
    <string name="send">Send</string>
    <string name="add_photo">Add Photo!</string>
    <string name="book_another_session">BOOK ANOTHER SESSION</string>
    <string name="go_home_page">GO TO HOMEPAGE</string>
    <string name="cancel_booking">CANCEL BOOKING</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="call_now">Call Now</string>
    <string name="join_session">Join Session</string>
    <string name="View_Details">View Details</string>
    <string name="submit_your_feedback">Submit Your Feedback</string>
    <string name="dont_need_session">I don\'t need the session any more.</string>
    <string name="tearms_use_policy">I accept all the</string>
    <string name="tearms_use_policyy">terms of the</string>
    <string name="tearms_use_policyyy"><b>Cancellation Policy</b></string>
    <string name="alert_cancel_booking">Do you want to cancel the booking?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="select_e_session_date">Select e-Session From Date</string>
    <string name="select_e_session_date_to">Select e-Session To Date</string>
    <string name="done">Done</string>
    <string name="search">Search</string>
    <string name="text_intro3">Recent Matches</string>
    <string name="desc_intro3">Enjoy with recent matches</string>
    <string name="create_new_page">Create New Page</string>
    <string name="please_enter_page_name">Please enter your Page Name here..</string>
    <string name="name">Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_full_address">Enter your address</string>
    <string name="address">Address</string>
    <string name="pin_code">Pin Code*</string>
    <string name="submit_details">Submit Details</string>
    <string name="enter_your_pin">Enter pin code</string>
    <string name="Are_you_sure_you_want_to_Report_this_feed">Are you sure you want to Report this feed?</string>
    <string name="criconet">Criconet</string>
    <string name="report">Report</string>
    <string name="welcome_to_criconet_family">Welcome to Criconet Family</string>
</resources>