<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/black"
    app:bbn_badgeColor="#FFFF0000"
    app:bbn_alwaysShowLabels="true"
    app:bbn_itemColorActive="#cec48d"
    app:bbn_itemColorInactive="@color/white"
    app:bbn_rippleColor="#33ffffff">

    <item
        android:color="@color/colorPrimaryDark"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />
    <item
        android:color="@color/colorPrimary"
        android:icon="@drawable/e_coaching"
        android:title="@string/coachh" />
    <item
        android:color="@color/colorPrimary"
        android:icon="@drawable/live_streaming"
        android:title="@string/live_one" />
    <item
        android:color="@color/colorPrimaryDark"
        android:icon="@drawable/recent_match"
        android:title="@string/recording" />


</menu>