<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:minLines="1"
            android:visibility="visible"
            android:layout_margin="5dp"
            android:text="@string/criconet"
            android:textColor="@color/bckground"
            android:fontFamily="@font/opensans_bold"
            android:textSize="@dimen/_13sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:minLines="1"
            android:visibility="visible"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/Are_you_sure_you_want_to_Report_this_feed"
            android:textColor="@color/bckground"
            android:fontFamily="@font/opensans_semibold"
            android:textSize="@dimen/_10sdp"
             />

        <EditText
            android:id="@+id/editxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_reason"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:inputType="text"
            android:fontFamily="@font/opensans_regular"
            android:textColor="@color/black"
            android:textColorHint="@color/edit_text_color_hint"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/cen"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginLeft="10dp"-->
<!--        android:layout_marginRight="10dp"-->
<!--        android:gravity="center"-->
<!--        android:visibility="invisible"-->
<!--        android:text=""-->
<!--        android:textColor="#000"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold" />-->

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/report"
        android:textAllCaps="true"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="#000"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

<!--    <TextView-->
<!--        android:id="@+id/cancel"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/ll"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_toLeftOf="@+id/cen"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:gravity="center"-->
<!--        android:padding="10dp"-->
<!--        android:text="cancel"-->
<!--        android:textAllCaps="true"-->
<!--        android:textColor="#000"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold" />-->


</RelativeLayout>