<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/canvas_theme"
        android:padding="@dimen/_10sdp"
        android:visibility="visible"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/fill_deatils"
            android:textColor="@color/green"
            android:textSize="@dimen/_10sdp"
            android:textAllCaps="false"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/name"
                    android:gravity="center_vertical"
                    android:fontFamily="@font/opensans_semibold"
                    android:textColor="@color/light_text_color"
                    android:textSize="@dimen/_10sdp"
                    android:textAllCaps="false"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/address"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/opensans_semibold"
                    android:textColor="@color/light_text_color"
                    android:textSize="@dimen/_10sdp"
                    android:textAllCaps="false"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pin_code"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/opensans_semibold"
                    android:textColor="@color/light_text_color"
                    android:textSize="@dimen/_10sdp"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pay_later_edit_bg"
                    android:hint="@string/enter_your_full_name"
                    android:importantForAutofill="no"
                    android:fontFamily="@font/opensans_semibold"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/light_text_color"
                    android:textColorHint="@color/light_text_color"
                    android:textSize="@dimen/_9sdp" />
                <EditText
                    android:id="@+id/edit_enter_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/pay_later_edit_bg"
                    android:hint="@string/enter_your_full_address"
                    android:importantForAutofill="no"
                    android:fontFamily="@font/opensans_semibold"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/light_text_color"
                    android:textColorHint="@color/light_text_color"
                    android:textSize="@dimen/_9sdp" />
                <EditText
                    android:id="@+id/edit_pinCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/pay_later_edit_bg"
                    android:hint="@string/enter_your_pin"
                    android:importantForAutofill="no"
                    android:fontFamily="@font/opensans_semibold"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/light_text_color"
                    android:textColorHint="@color/light_text_color"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/flSubmitDetails"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/colorPrimary">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/app_red"/>
            <View
                android:layout_width="0.9dp"
                android:layout_height="match_parent"
                android:background="@color/app_red"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="bottom"
                android:background="@color/app_redd"/>
            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@color/app_redd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/submit_details"
                android:textAllCaps="true"
                android:textColor="@color/light_text_color"
                android:textSize="@dimen/_9sdp"
                app:fontFamily="@font/opensans_semibold" />

        </FrameLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_alignParentTop="true"
        app:tint="@color/light_text_color"
        android:src="@drawable/ic_close_black_24dp"/>
</RelativeLayout>